# nfl_fastmcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
examples/: mcp-config-sse.json  mcp-config-stdio.json
src/fast_nfl_mcp/: __init__.py  constants.py  data_fetcher.py  kaggle_fetcher.py  models.py  nfl_data_py_fetcher.py  redis_cache.py  schema_manager.py  serialization.py  server.py  utils.py
src/fast_nfl_mcp/core/: __init__.py  server.py
src/fast_nfl_mcp/data/: __init__.py  fetcher.py  kaggle.py  schema.py
src/fast_nfl_mcp/tools/: __init__.py  bdb.py  draft.py  misc.py  next_gen.py  play_by_play.py  player_stats.py  reference.py  registry.py  rosters.py  schedules.py  utilities.py  validation.py
src/fast_nfl_mcp/utils/: __init__.py  cache.py  constants.py  enums.py  helpers.py  types.py  validation.py
tasks/JAC-25/: README.md  implementation-plan.md  notes.md
tests/: __init__.py  conftest.py  test_data_fetcher.py  test_docker_e2e.py  test_kaggle_fetcher.py  test_models.py  test_nfl_data_py_fetcher.py  test_redis_cache.py  test_schema_manager.py  test_server.py
tests/tools/: test_bdb.py  test_draft.py  test_misc.py  test_next_gen.py  test_play_by_play.py  test_player_stats.py  test_reference.py  test_rosters.py  test_schedules.py  test_utilities.py
