[project]
name = "fast-nfl-mcp"
version = "0.1.0"
description = "MCP server exposing NFL data from nfl_data_py to AI assistants"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jacques Esterhuizen" }]
keywords = ["mcp", "nfl", "football", "data", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.0.0",
    "isort>=7.0.0",
    "kagglehub>=0.3.0",
    "nfl-data-py>=0.3.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
    "pandas-stubs>=2.0.0",
    "requests>=2.28.0",
    "types-requests>=2.28.0",
]

[project.scripts]
fast-nfl-mcp = "fast_nfl_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fast_nfl_mcp"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.isort]
known-first-party = ["fast_nfl_mcp"]

[tool.isort]
profile = "black"
known_first_party = ["fast_nfl_mcp"]
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["nfl_data_py.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["kagglehub.*", "kagglehub"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pytest.*", "pytest"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["fastmcp.*", "fastmcp"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=fast_nfl_mcp --cov-report=term-missing -m 'not e2e'"
markers = [
    "e2e: marks tests as end-to-end (requires Docker, deselect with '-m \"not e2e\"')",
]

[tool.coverage.run]
source = ["src/fast_nfl_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
